syntax = "proto3";

package ihavefood.user


 TODO use properly path
option go_package =  "github.com/pongsathonn/ihavefood/protos/user";
// UserService module -> github.com/pongsathonn/ihavefood/src/userservice

import "google/api/annotations.proto";

//--------------------------------------------------------------------------------------

// Manages user profiles
service UserService {

    rpc ListProfiles(ListProfilesRequest) returns(ListProfilesResponse){
        option (google.api.http) = {
            get: "/api/users" 
        };
    }

    rpc GetProfile(GetProfileRequest) returns(Profile){}
        option (google.api.http) = {
            get: "/api/users/{user_id}" 
        };
    }

    rpc CreateProfile(CreateProfileRequest) returns (Profile) {}

    // Draft 
    // rpc UpdateProfile(UpdateProfileRequest) returns (Profile){}
    // rpc RenameProfile(RenameProfileRequest) returns (RenameProfileResponse){}
    // rpc ValidateProfileSocial() returns(){}

    rpc DeleteProfile(DeleteProfileRequest) returns(google.protobuf.Empty){
        option (google.api.http) = {
            delete: "/api/users/{user_id}" 
        };
    }
}

message Profile {
    string user_id = 1;
    string username = 2;
    bytes picture = 3;
    string bio = 4;
    oneof social {
        string facebook = 5;
        string instagram = 6;
        string line = 7;
    }
    Address address = 8;
}

message ListProfileRequest {
}

message ListProfileResponse{
    repeated UserProfile user_profiles = 1;
}

message GetProfileRequest{
    string user_id = 1;
}

message CreateProfileRequest {
    string username = 1;
    string phone_number = 2;
    Address address = 3;
}

message DeleteUserProfileRequest {
    string user_id = 1;
}
